--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "JavaScript development environment Pluralsight course by Cory House",
   "scripts"    : {
     "prestart": "node buildScripts/startMessage.js",
-    "start"   : "node buildScripts/srcServer.js"
+    "start"   : "node buildScripts/srcServer.js",
+    "share"   : "lt --port 3000"
   },
   "author"      : "Khwilo Kabaka",
   "license"     : "MIT",
