--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start"      : "npm-run-all --parallel open:src",
     "open:src"   : "babel-node buildScripts/srcServer.js",
     "lint"       : "esw webpack.config.* src buildScripts --color",
+    "lint:watch" : "npm run lint -- --watch",
     "localtunnel": "lt --port 3000",
     "share"      : "npm-run-all --parallel open:src localtunnel"
   },
